[gd_scene load_steps=6 format=3 uid="uid://cv6784jwmo40"]

[ext_resource type="Script" uid="uid://bcaxw4ao18dwf" path="res://scenes/main_menu.gd" id="1_8ln24"]
[ext_resource type="Texture2D" uid="uid://q8detdwy65ce" path="res://assets/main_menu/Start_BTN.png" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://dxyqw8walyefq" path="res://assets/main_menu/Exit_BTN.png" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://d2usth3dlmejv" path="res://assets/background_image.jpg" id="4_8ln24"]
[ext_resource type="Texture2D" uid="uid://b3tixkt7dqbh2" path="res://assets/main_menu/title.png" id="4_wu84c"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ln24")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8ln24")

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1151.0
offset_right = 1151.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8ln24")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 35.0
offset_right = 1043.0
offset_bottom = 659.0
grow_horizontal = 2
scale = Vector2(0.375, 0.375)
texture = ExtResource("4_wu84c")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.145
offset_top = 31.0
offset_right = 324.855
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.485, 0.485)
theme_type_variation = &"FlatButton"
icon = ExtResource("2_ekxnf")

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.145
offset_top = -171.0
offset_right = 324.855
offset_bottom = -41.9999
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.485, 0.485)
theme_type_variation = &"FlatButton"
icon = ExtResource("3_bqqt6")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
